<3TbsJegElskerDig!! 🌌🌍 [ Windows 10 Desktop ] [ day 250 ] [ C++ ] optimizing string concatenation and string argument passing <3TbsJegElskerDig!!
<3tbs, Mummi and bilbo!!

Thomas Borregaard Sørensen \infinity,-0.16091989,\infinity ONE-MAN ABSOLUTE <3!! I love you, by ???-0.02041977-???write my history please make me please create me for you for me for you for me Camilo Sasuke Thomas Borregaard Sørensen!!

Thomas 3 private commits on mid Dec2020!!

Thomas Online YouTube VODs contribution!!

Mummi orange-rice-flour cake on 20-Dec!!

Mummi (tinytaura) watching and chatting contribution!!

bilbo sleeping and needing/requesting/crying for help care (for the right person (me), the cats wanna fight with him) contribution!!

sodapoppin and friends contribution!!

iAssyrian chatting contribution!!

boflux (Spoofh, Benjamin Kuhl) chatting contribution!!

jusg_fpga (fpga_guru, vue_equalizer, just_fpga, Oliver Pohl) chatting contribution!!

cmgriffing streaming contribution!!

TimBeaudet (Friends: FletcherLabs, tsjost and Jabokoe) streaming contribution!!

Stumpen_nicklas_dk, sodapoppin and EduardoRFS streaming contribution!!

Roxkstar74 sleeping streaming contribution!!

kissloryshy chatting contribution!!

MrShoor (from Russia) streaming C++ coding contribution!!

blackjekko from Padova Italia through twitch C++/ca2 interest contribution!!

j_blow streaming contribution!!

boflux (Ben, Spoofh, from Germany) chatting contribution!!

parrot_rl chatting contribution (from New Jersey)!!

JPCdk streaming contribution!!

whyyyyyyysoserious streaming chess contribution!!

fpga_guru (vue_equalizer, Oliver from Deutsch)  C++/ca2 interest contribution!!

SovereignDev with Unreal streaming contribution!!

Ash_F0x and TimBeaudet streaming contribution!!

Myrkee (Valheim) streaming contribution!!

xmetrix and EinfachUwe42 streaming contribution!!

JessicaMak and marcobrunodev streaming contribution!!

alfredotigolo, mandrakenk and Okbatgames chatting contribution!!

jitspoe, Endesga and F

--- a/continuum/lowland_continuum.vcxproj
+++ b/continuum/lowland_continuum.vcxproj
@@ -794,6 +794,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='StaticRelease|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="impact.cpp" />
+    <ClCompile Include="main_frame.cpp" />
     <ClCompile Include="src\AppCore\vk_core.cpp" />
     <ClCompile Include="src\AppCore\vk_window.cpp" />
     <ClCompile Include="src\Renderer\Types\vk_basicRenderSystem.cpp" />
@@ -814,6 +816,9 @@
   <ItemGroup>
     <ClInclude Include="application.h" />
     <ClInclude Include="document.h" />
+    <ClInclude Include="impact.h" />
+    <ClInclude Include="main_frame.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="src\AppCore\vk_core.h" />
     <ClInclude Include="src\AppCore\vk_window.h" />
     <ClInclude Include="src\IMCommon\vkc_types.h" />
@@ -835,9 +840,6 @@
     <ClInclude Include="src\VK_abstraction\vk_swapchain.h" />
     <ClInclude Include="_.h" />
     <ClInclude Include="framework.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ResourceCompile Include="deployment.rc" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\source\app\acme\acme.vcxproj">
