--- a/continuum/lowland_continuum.vcxproj
+++ b/continuum/lowland_continuum.vcxproj
@@ -782,6 +782,8 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AppCore\vk_core.cpp" />
+    <ClCompile Include="AppCore\vk_window.cpp" />
     <ClCompile Include="application.cpp" />
     <ClCompile Include="document.cpp" />
     <ClCompile Include="framework.cpp">
@@ -796,48 +798,46 @@
     </ClCompile>
     <ClCompile Include="impact.cpp" />
     <ClCompile Include="main_frame.cpp" />
-    <ClCompile Include="src\AppCore\vk_core.cpp" />
-    <ClCompile Include="src\AppCore\vk_window.cpp" />
-    <ClCompile Include="src\Renderer\Types\vk_basicRenderSystem.cpp" />
-    <ClCompile Include="src\Renderer\Types\vk_pointLightSystem.cpp" />
-    <ClCompile Include="src\Renderer\vk_buffer.cpp" />
-    <ClCompile Include="src\Renderer\vk_renderer.cpp" />
-    <ClCompile Include="src\VK_abstraction\vk_camera.cpp" />
-    <ClCompile Include="src\VK_abstraction\vk_descriptors.cpp" />
-    <ClCompile Include="src\VK_abstraction\vk_device.cpp" />
-    <ClCompile Include="src\VK_abstraction\vk_gameObject.cpp" />
-    <ClCompile Include="src\VK_abstraction\vk_initializers.cpp" />
-    <ClCompile Include="src\VK_abstraction\vk_input.cpp" />
-    <ClCompile Include="src\VK_abstraction\vk_model.cpp" />
-    <ClCompile Include="src\VK_abstraction\vk_pipeline.cpp" />
-    <ClCompile Include="src\VK_abstraction\vk_swapchain.cpp" />
+    <ClCompile Include="Renderer\Types\vk_basicRenderSystem.cpp" />
+    <ClCompile Include="Renderer\Types\vk_pointLightSystem.cpp" />
+    <ClCompile Include="Renderer\vk_buffer.cpp" />
+    <ClCompile Include="Renderer\vk_renderer.cpp" />
+    <ClCompile Include="VK_abstraction\vk_camera.cpp" />
+    <ClCompile Include="VK_abstraction\vk_descriptors.cpp" />
+    <ClCompile Include="VK_abstraction\vk_device.cpp" />
+    <ClCompile Include="VK_abstraction\vk_gameObject.cpp" />
+    <ClCompile Include="VK_abstraction\vk_initializers.cpp" />
+    <ClCompile Include="VK_abstraction\vk_input.cpp" />
+    <ClCompile Include="VK_abstraction\vk_model.cpp" />
+    <ClCompile Include="VK_abstraction\vk_pipeline.cpp" />
+    <ClCompile Include="VK_abstraction\vk_swapchain.cpp" />
     <ClCompile Include="_.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AppCore\vk_core.h" />
+    <ClInclude Include="AppCore\vk_window.h" />
     <ClInclude Include="application.h" />
     <ClInclude Include="document.h" />
+    <ClInclude Include="IMCommon\vkc_types.h" />
+    <ClInclude Include="IMCommon\vk_types.h" />
     <ClInclude Include="impact.h" />
     <ClInclude Include="main_frame.h" />
+    <ClInclude Include="Renderer\Types\vk_basicRenderSystem.h" />
+    <ClInclude Include="Renderer\Types\vk_pointLightSystem.h" />
+    <ClInclude Include="Renderer\vk_buffer.h" />
+    <ClInclude Include="Renderer\vk_renderer.h" />
     <ClInclude Include="resource.h" />
-    <ClInclude Include="src\AppCore\vk_core.h" />
-    <ClInclude Include="src\AppCore\vk_window.h" />
-    <ClInclude Include="src\IMCommon\vkc_types.h" />
-    <ClInclude Include="src\IMCommon\vk_types.h" />
-    <ClInclude Include="src\Renderer\Types\vk_basicRenderSystem.h" />
-    <ClInclude Include="src\Renderer\Types\vk_pointLightSystem.h" />
-    <ClInclude Include="src\Renderer\vk_buffer.h" />
-    <ClInclude Include="src\Renderer\vk_renderer.h" />
-    <ClInclude Include="src\Utils\vkc_utils.h" />
-    <ClInclude Include="src\VK_abstraction\vk_camera.h" />
-    <ClInclude Include="src\VK_abstraction\vk_descriptors.h" />
-    <ClInclude Include="src\VK_abstraction\vk_device.h" />
-    <ClInclude Include="src\VK_abstraction\vk_frameInfo.h" />
-    <ClInclude Include="src\VK_abstraction\vk_gameObject.h" />
-    <ClInclude Include="src\VK_abstraction\vk_initializers.h" />
-    <ClInclude Include="src\VK_abstraction\vk_input.h" />
-    <ClInclude Include="src\VK_abstraction\vk_model.h" />
-    <ClInclude Include="src\VK_abstraction\vk_pipeline.h" />
-    <ClInclude Include="src\VK_abstraction\vk_swapchain.h" />
+    <ClInclude Include="Utils\vkc_utils.h" />
+    <ClInclude Include="VK_abstraction\vk_camera.h" />
+    <ClInclude Include="VK_abstraction\vk_descriptors.h" />
+    <ClInclude Include="VK_abstraction\vk_device.h" />
+    <ClInclude Include="VK_abstraction\vk_frameInfo.h" />
+    <ClInclude Include="VK_abstraction\vk_gameObject.h" />
+    <ClInclude Include="VK_abstraction\vk_initializers.h" />
+    <ClInclude Include="VK_abstraction\vk_input.h" />
+    <ClInclude Include="VK_abstraction\vk_model.h" />
+    <ClInclude Include="VK_abstraction\vk_pipeline.h" />
+    <ClInclude Include="VK_abstraction\vk_swapchain.h" />
     <ClInclude Include="_.h" />
     <ClInclude Include="framework.h" />
   </ItemGroup>
