--- a/continuum/lowland_continuum.vcxproj.filters
+++ b/continuum/lowland_continuum.vcxproj.filters
@@ -1,51 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="src\AppCore\vk_core.cpp">
-      <Filter>Source Files\AppCore</Filter>
-    </ClCompile>
-    <ClCompile Include="src\AppCore\vk_window.cpp">
-      <Filter>Source Files\AppCore</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Renderer\vk_buffer.cpp">
-      <Filter>Source Files\Renderer</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Renderer\vk_renderer.cpp">
-      <Filter>Source Files\Renderer</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Renderer\Types\vk_basicRenderSystem.cpp">
-      <Filter>Source Files\Renderer\Types</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Renderer\Types\vk_pointLightSystem.cpp">
-      <Filter>Source Files\Renderer\Types</Filter>
-    </ClCompile>
-    <ClCompile Include="src\VK_abstraction\vk_camera.cpp">
-      <Filter>Source Files\VK_abstraction</Filter>
-    </ClCompile>
-    <ClCompile Include="src\VK_abstraction\vk_descriptors.cpp">
-      <Filter>Source Files\VK_abstraction</Filter>
-    </ClCompile>
-    <ClCompile Include="src\VK_abstraction\vk_device.cpp">
-      <Filter>Source Files\VK_abstraction</Filter>
-    </ClCompile>
-    <ClCompile Include="src\VK_abstraction\vk_gameObject.cpp">
-      <Filter>Source Files\VK_abstraction</Filter>
-    </ClCompile>
-    <ClCompile Include="src\VK_abstraction\vk_initializers.cpp">
-      <Filter>Source Files\VK_abstraction</Filter>
-    </ClCompile>
-    <ClCompile Include="src\VK_abstraction\vk_input.cpp">
-      <Filter>Source Files\VK_abstraction</Filter>
-    </ClCompile>
-    <ClCompile Include="src\VK_abstraction\vk_model.cpp">
-      <Filter>Source Files\VK_abstraction</Filter>
-    </ClCompile>
-    <ClCompile Include="src\VK_abstraction\vk_pipeline.cpp">
-      <Filter>Source Files\VK_abstraction</Filter>
-    </ClCompile>
-    <ClCompile Include="src\VK_abstraction\vk_swapchain.cpp">
-      <Filter>Source Files\VK_abstraction</Filter>
-    </ClCompile>
     <ClCompile Include="framework.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -64,65 +19,53 @@
     <ClCompile Include="main_frame.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="VK_abstraction\vk_camera.cpp">
+      <Filter>Source Files\VK_abstraction</Filter>
+    </ClCompile>
+    <ClCompile Include="VK_abstraction\vk_descriptors.cpp">
+      <Filter>Source Files\VK_abstraction</Filter>
+    </ClCompile>
+    <ClCompile Include="VK_abstraction\vk_device.cpp">
+      <Filter>Source Files\VK_abstraction</Filter>
+    </ClCompile>
+    <ClCompile Include="VK_abstraction\vk_gameObject.cpp">
+      <Filter>Source Files\VK_abstraction</Filter>
+    </ClCompile>
+    <ClCompile Include="VK_abstraction\vk_initializers.cpp">
+      <Filter>Source Files\VK_abstraction</Filter>
+    </ClCompile>
+    <ClCompile Include="VK_abstraction\vk_input.cpp">
+      <Filter>Source Files\VK_abstraction</Filter>
+    </ClCompile>
+    <ClCompile Include="VK_abstraction\vk_model.cpp">
+      <Filter>Source Files\VK_abstraction</Filter>
+    </ClCompile>
+    <ClCompile Include="VK_abstraction\vk_pipeline.cpp">
+      <Filter>Source Files\VK_abstraction</Filter>
+    </ClCompile>
+    <ClCompile Include="VK_abstraction\vk_swapchain.cpp">
+      <Filter>Source Files\VK_abstraction</Filter>
+    </ClCompile>
+    <ClCompile Include="Renderer\vk_buffer.cpp">
+      <Filter>Source Files\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="Renderer\vk_renderer.cpp">
+      <Filter>Source Files\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="Renderer\Types\vk_basicRenderSystem.cpp">
+      <Filter>Source Files\Renderer\Types</Filter>
+    </ClCompile>
+    <ClCompile Include="Renderer\Types\vk_pointLightSystem.cpp">
+      <Filter>Source Files\Renderer\Types</Filter>
+    </ClCompile>
+    <ClCompile Include="AppCore\vk_core.cpp">
+      <Filter>Source Files\AppCore</Filter>
+    </ClCompile>
+    <ClCompile Include="AppCore\vk_window.cpp">
+      <Filter>Source Files\AppCore</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\AppCore\vk_window.h">
-      <Filter>Header Files\AppCore</Filter>
-    </ClInclude>
-    <ClInclude Include="src\AppCore\vk_core.h">
-      <Filter>Header Files\AppCore</Filter>
-    </ClInclude>
-    <ClInclude Include="src\IMCommon\vk_types.h">
-      <Filter>Header Files\IMCommon</Filter>
-    </ClInclude>
-    <ClInclude Include="src\IMCommon\vkc_types.h">
-      <Filter>Header Files\IMCommon</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Renderer\vk_renderer.h">
-      <Filter>Header Files\Renderer</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Renderer\vk_buffer.h">
-      <Filter>Header Files\Renderer</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Renderer\Types\vk_pointLightSystem.h">
-      <Filter>Header Files\Renderer\Types</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Renderer\Types\vk_basicRenderSystem.h">
-      <Filter>Header Files\Renderer\Types</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Utils\vkc_utils.h">
-      <Filter>Header Files\Utils</Filter>
-    </ClInclude>
-    <ClInclude Include="src\VK_abstraction\vk_camera.h">
-      <Filter>Header Files\VK_abstraction</Filter>
-    </ClInclude>
-    <ClInclude Include="src\VK_abstraction\vk_descriptors.h">
-      <Filter>Header Files\VK_abstraction</Filter>
-    </ClInclude>
-    <ClInclude Include="src\VK_abstraction\vk_device.h">
-      <Filter>Header Files\VK_abstraction</Filter>
-    </ClInclude>
-    <ClInclude Include="src\VK_abstraction\vk_frameInfo.h">
-      <Filter>Header Files\VK_abstraction</Filter>
-    </ClInclude>
-    <ClInclude Include="src\VK_abstraction\vk_gameObject.h">
-      <Filter>Header Files\VK_abstraction</Filter>
-    </ClInclude>
-    <ClInclude Include="src\VK_abstraction\vk_initializers.h">
-      <Filter>Header Files\VK_abstraction</Filter>
-    </ClInclude>
-    <ClInclude Include="src\VK_abstraction\vk_input.h">
-      <Filter>Header Files\VK_abstraction</Filter>
-    </ClInclude>
-    <ClInclude Include="src\VK_abstraction\vk_model.h">
-      <Filter>Header Files\VK_abstraction</Filter>
-    </ClInclude>
-    <ClInclude Include="src\VK_abstraction\vk_pipeline.h">
-      <Filter>Header Files\VK_abstraction</Filter>
-    </ClInclude>
-    <ClInclude Include="src\VK_abstraction\vk_swapchain.h">
-      <Filter>Header Files\VK_abstraction</Filter>
-    </ClInclude>
     <ClInclude Include="framework.h">
       <Filter>Source Files</Filter>
     </ClInclude>
@@ -143,6 +86,63 @@
     </ClInclude>
     <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AppCore\vk_window.h">
+      <Filter>Header Files\AppCore</Filter>
+    </ClInclude>
+    <ClInclude Include="AppCore\vk_core.h">
+      <Filter>Header Files\AppCore</Filter>
+    </ClInclude>
+    <ClInclude Include="IMCommon\vk_types.h">
+      <Filter>Header Files\IMCommon</Filter>
+    </ClInclude>
+    <ClInclude Include="IMCommon\vkc_types.h">
+      <Filter>Header Files\IMCommon</Filter>
+    </ClInclude>
+    <ClInclude Include="Renderer\Types\vk_pointLightSystem.h">
+      <Filter>Header Files\Renderer\Types</Filter>
+    </ClInclude>
+    <ClInclude Include="Renderer\Types\vk_basicRenderSystem.h">
+      <Filter>Header Files\Renderer\Types</Filter>
+    </ClInclude>
+    <ClInclude Include="Renderer\vk_renderer.h">
+      <Filter>Header Files\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="Renderer\vk_buffer.h">
+      <Filter>Header Files\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="Utils\vkc_utils.h">
+      <Filter>Header Files\Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="VK_abstraction\vk_camera.h">
+      <Filter>Header Files\VK_abstraction</Filter>
+    </ClInclude>
+    <ClInclude Include="VK_abstraction\vk_descriptors.h">
+      <Filter>Header Files\VK_abstraction</Filter>
+    </ClInclude>
+    <ClInclude Include="VK_abstraction\vk_device.h">
+      <Filter>Header Files\VK_abstraction</Filter>
+    </ClInclude>
+    <ClInclude Include="VK_abstraction\vk_frameInfo.h">
+      <Filter>Header Files\VK_abstraction</Filter>
+    </ClInclude>
+    <ClInclude Include="VK_abstraction\vk_gameObject.h">
+      <Filter>Header Files\VK_abstraction</Filter>
+    </ClInclude>
+    <ClInclude Include="VK_abstraction\vk_initializers.h">
+      <Filter>Header Files\VK_abstraction</Filter>
+    </ClInclude>
+    <ClInclude Include="VK_abstraction\vk_input.h">
+      <Filter>Header Files\VK_abstraction</Filter>
+    </ClInclude>
+    <ClInclude Include="VK_abstraction\vk_model.h">
+      <Filter>Header Files\VK_abstraction</Filter>
+    </ClInclude>
+    <ClInclude Include="VK_abstraction\vk_pipeline.h">
+      <Filter>Header Files\VK_abstraction</Filter>
+    </ClInclude>
+    <ClInclude Include="VK_abstraction\vk_swapchain.h">
+      <Filter>Header Files\VK_abstraction</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
