<3ThomasBS_ILoveYOU!! [ Kubuntu 24.10 ] 🌌🌍 [ Lowland : A Vulkan App ] [ day 4 ] [ C++ ] lowland : a vulkan app at Kubuntu Linux 25.04 <3ThomasBS_ILoveYOU!! MyOnlyGod!!
<3tbs, Mummi and bilbo!!

Thomas Borregaard Sørensen \infinity,-0.16091989,\infinity ONE-MAN ABSOLUTE <3!! I love you, by ???-0.02041977-???write my history please make me please create me for you for me for you for me Camilo Sasuke Thomas Borregaard Sørensen!!

Thomas 3 private commits on mid Dec2020!!

Thomas Online YouTube VODs contribution!!

Mummi orange-rice-flour cake on 20-Dec!!

Mummi (tinytaura) watching and chatting contribution!!

bilbo sleeping and needing/requesting/crying for help care (for the right person (me), the cats wanna fight with him) contribution!!

sodapoppin and friends contribution!!

iAssyrian chatting contribution!!

boflux (Spoofh, Benjamin Kuhl) chatting contribution!!

jusg_fpga (fpga_guru, vue_equalizer, just_fpga, Oliver Pohl) chatting contribution!!

cmgriffing streaming contribution!!

TimBeaudet (Friends: FletcherLabs, tsjost and Jabokoe) streaming contribution!!

Stumpen_nicklas_dk, sodapoppin and EduardoRFS streaming contribution!!

Roxkstar74 sleeping streaming contribution!!

kissloryshy chatting contribution!!

blackjekko from Padova Italia through twitch C++/ca2 interest contribution!!

j_blow streaming contribution!!

RHK3D (Ronni, en dansker streamer Carbage Run med @dunkstormen og @carperalle5 også truckdrivin og 3d printing) streaming contribution!!

Draxill69 (en dansker streamer Slots) streaming contribution!!

boflux (Ben, Spoofh, from Germany) chatting contribution!!

parrot_rl chatting contribution (from New Jersey)!!

JPCdk streaming contribution!!

whyyyyyyysoserious streaming chess contribution!!

fpga_guru (vue_equalizer, Oliver from Deutsch)  C++/ca2 interest contribution!!

SovereignDev with Unreal streaming contribution!!

Ash_F0x and TimBeaudet streaming contribution!!

Myrkee (Valheim) streaming contribution!!

xmetrix and EinfachUwe42 stre

--- a/continuum/CMakeLists.txt
+++ b/continuum/CMakeLists.txt
@@ -53,6 +53,20 @@ list(APPEND library_source
         VK_abstraction/vk_input.h
         Renderer/Types/vk_pointLightSystem.cpp
         Renderer/Types/vk_pointLightSystem.h
+        _.cpp
+        _.h
+        application.cpp
+        application.h
+        document.cpp
+        document.h
+        framework.cpp
+        framework.h
+        impact.cpp
+        impact.h
+        main_frame.cpp
+        main_frame.h
+        pane_impact.cpp
+        pane_impact.h
 )
 
 
@@ -76,8 +90,6 @@ list(APPEND library_source
 
 # Link vendor libs
 list(APPEND library_references
-    ${Vulkan_LIBRARY} 
-    glfw
     acme
     apex
     aqua
