--- a/landen/CMakeLists.txt
+++ b/landen/CMakeLists.txt
@@ -3,6 +3,55 @@ project(lowland_landen CXX)
 
 
 list(APPEND library_source
+        vulkan/application.cpp
+        vulkan/application.h
+        vulkan/benchmark.hpp
+        vulkan/camera.hpp
+        vulkan/CMakeLists.txt
+        vulkan/CommandLineParser.hpp
+        vulkan/Entrypoints.h
+        vulkan/frustum.hpp
+        vulkan/keycodes.h
+        vulkan/keycodes.hpp
+        vulkan/offscreen.cpp
+        vulkan/offscreen.h
+        #vulkan/render_headless.cpp
+        #vulkan/render_headless.h
+        vulkan/shared.h
+        #vulkan/swap_chain.cpp
+        #vulkan/swap_chain.h
+        #vulkan/swap_chain2.cpp
+        #vulkan/swap_chain2.h
+        vulkan/threadpool.hpp
+        vulkan/vk_container.cpp
+        vulkan/vk_container.h
+        #vulkan/vulkan_example_base_with_swap_chain.cpp
+        #vulkan/vulkan_example_base_with_swap_chain.h
+        vulkan/vulkan_example_base_no_swap_chain.cpp
+        vulkan/vulkan_example_base_no_swap_chain.h
+        vulkan/VulkanAndroid.cpp
+        vulkan/VulkanAndroid.h
+        vulkan/VulkanBuffer.cpp
+        vulkan/VulkanBuffer.h
+        vulkan/VulkanDebug.cpp
+        vulkan/VulkanDebug.h
+        vulkan/VulkanDevice.cpp
+        vulkan/VulkanDevice.h
+        vulkan/VulkanFrameBuffer.hpp
+        vulkan/VulkanglTFModel.cpp
+        vulkan/VulkanglTFModel.h
+        vulkan/VulkanInitializers.h
+        vulkan/VulkanInitializers.hpp
+        #vulkan/VulkanRaytracingSample.cpp
+        #vulkan/VulkanRaytracingSample.h
+        #vulkan/VulkanSwapChain.cpp
+        #vulkan/VulkanSwapChain.h
+        #vulkan/VulkanTexture.cpp
+        #vulkan/VulkanTexture.h
+        vulkan/VulkanTools.cpp
+        vulkan/VulkanTools.h
+        vulkan/VulkanUIOverlay.cpp
+        vulkan/VulkanUIOverlay.h
    _.cpp
    _.h
    application.cpp
@@ -32,6 +81,19 @@ list(APPEND library_source
 )
 
 
+list(APPEND library_references
+        acme
+        apex
+        aqua
+        aura
+        axis
+        base
+        bred
+        core
+        imgui
+)
+
+
 add_library(${PROJECT_NAME} SHARED ${library_source})
 add_library(static_${PROJECT_NAME} STATIC ${library_source})
 
@@ -50,11 +112,28 @@ if (MSVC)
    target_link_options(${PROJECT_NAME} PRIVATE "/DEFAULTLIB:msvcrt$<$<CONFIG:Debug>:d>")
    target_link_options(${PROJECT_NAME} PRIVATE "/SUBSYSTEM:WINDOWS")
    target_link_libraries(${PROJECT_NAME} PRIVATE acme apex aqua aura axis base)
+   target_compile_definitions(${PROJECT_NAME} PRIVATE VK_USE_PLATFORM_WIN32_KHR)
 elseif (${LINUX})
-   target_compile_options(${PROJECT_NAME} PRIVATE $<$<COMPILE_LANGUAGE:CXX>:-fpermissive ${EXTRA_CXX_TARGET_COMPILER_OPTIONS}>)
-   #target_link_options(${PROJECT_NAME} PRIVATE "-Wl,-rpath=\$ORIGIN")
-   target_link_libraries(${PROJECT_NAME} PRIVATE acme apex aqua aura axis base bred core)
+   #if(USE_PKGCONFIG)
+   pkg_check_modules(PKGCONFIG vulkan)
+   #endif()
+
+
+   target_compile_options(${PROJECT_NAME} PRIVATE $<$<COMPILE_LANGUAGE:CXX>:-fpermissive  ${EXTRA_CXX_TARGET_COMPILER_OPTIONS}>)
+
+
+   target_compile_options(${PROJECT_NAME} PRIVATE ${PKGCONFIG_CFLAGS})
+   target_compile_options(${PROJECT_NAME} PRIVATE ${PKGCONFIG_CFLAGS})
+   target_link_options(${PROJECT_NAME} PRIVATE ${PKGCONFIG_LDFLAGS})
+
+   target_link_libraries(${PROJECT_NAME} PRIVATE ${library_references} ${global_library_references} ${PKGCONFIG_LIBRARIES})
    target_link_options(${PROJECT_NAME} PRIVATE -Wl,-z,defs)
+   # target_link_options(static_${PROJECT_NAME} PRIVATE --whole-archive)
+
+
+   message(STATUS "(C) PKGCONFIG_LIBRARIES is " ${PKGCONFIG_LIBRARIES})
+
+   target_compile_definitions(${PROJECT_NAME} PRIVATE VK_USE_PLATFORM_WAYLAND_KHR VK_USE_PLATFORM_XCB_KHR VK_USE_PLATFORM_WAYLAND_OR_XCB_KHR)
 endif ()
 
 
